Minor spacing & UI fixes to website

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -140,6 +140,13 @@
 
 @media (max-width: 768px) {
 
+  .about-wrapper {
+    background:
+      radial-gradient(circle, rgba(255,255,255,0.15) 1.75px, transparent 1px),
+      linear-gradient(180deg, #222 100%, #9ac1ce 0%);
+    background-size: 40px 40px, cover;
+    border-color: #222;
+  }
   .quote-block {
     max-width: 90%;
   }
@@ -165,5 +172,6 @@
     .about-heading {
       margin-left: 0;
       text-align: center;
+      margin-bottom: 70px;
     }
 }
