--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -2,7 +2,7 @@
   text-align: center;
   padding: 80px 20px;
   position: relative;
-  background: #91c1ca;
+  background-color: #9ac1ce;
   overflow-x: hidden;
 }
 
