--- a/src/Components/ProjCards/ProjCards.css
+++ b/src/Components/ProjCards/ProjCards.css
@@ -258,6 +258,7 @@
     .proj-heading {
         margin-left: 0;
         text-align: center;
+        margin-bottom: 70px;
     }
 
     .slick-arrow,
